@@ -5,6 +5,9 @@ installation-guide (2008xxxx) UNRELEASED; urgency=low
   * Add note about preseeding ownership to preseed-seenflag section, since I
     had a user confused by this who hadn't found the note elsewhere
     explaining owners.
+  * Use /dev/sda and /dev/sdb in the RAID preseeding example rather than
+    /dev/discs/disc0/disc and /dev/discs/disc1/disc, since the latter
+    devices no longer exist.
 
   [ Frans Pop ]
   * Document preseeding of network-console now that its postinst can be
